--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
     "path": "^0.12.7",
     "url": "^0.11.3"
   }
